apps/base/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: whoami
