apps/base/sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    # This annotation specifies that ingress-nginx should handle this Ingress
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "whoami.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
